# vio_zero

./: .gitignore  CMakeLists.txt  download_data.sh  pixi.toml
src/: benchmark_detectors.cpp
